# belkit

./: .gitignore  Pipfile  README.md  emptydb.sql  manage.py  pyproject.toml
backend/: .gitignore  README.md  pyproject.toml  ruff.toml
backend/belkit/: settings.py  urls.py  wsgi.py
backend/dictionary/: admin.py  apps.py  models.py  urls.py  views.py
backend/dictionary/api/: __init__.py  example.py
backend/dictionary/martor/extensions/: color_squares.py
backend/dictionary/migrations/: 0001_initial.py  0002_alter_article_pronunciation.py  0004_alter_article_pronunciation_alter_article_title.py  0006_article_direction.py  0007_alter_article_direction.py  0008_article_created_at_article_updated_at_and_more.py
backend/django_dsl_dict/: apps.py  widgets.py
backend/django_dsl_dict/static/css/: dsl_textarea.css
backend/django_dsl_dict/static/js/: dsl_instruments.js  dsl_textarea.js
backend/django_dsl_dict/templates/widgets/: dsl_textarea.html
backend/utils/: urls.py
belkit/: asgi.py  settings.py  urls.py  wsgi.py
dictionary/: admin.py  apps.py  models.py  search_indexes.py  views.py
dictionary/api/: __init__.py  article.py  example.py
dictionary/migrations/: 0001_initial.py  0002_alter_article_pinyin.py  0003_alter_article_title.py  0003_rename_description_article_body_alter_article_title.py  0004_article_translation_direction.py  0005_example.py  0005_example_alter_article_options_alter_article_body_and_more.py
frontend/: README.md  admin.py  next.config.ts  package.json  setupProxy.js  urls.py  views.py
utils/: urls.py  views.py
(+47 files in other folders)
